<resources>
    <string name="app_name">MiniGallery</string>
    <string name="button_select_picture">Load Image</string>
    <string name="button_save_picture">Save Image</string>
    <string name="slider_description_blur">Blur</string>
    <string name="slider_description_saturation">Saturation</string>
    <string name="view_selected_image">Image Container</string>
    <string name="textview_slider_blur">Blur</string>
    <string name="textview_slider_saturation">Saturation</string>
    <string name="title_welcome_text">Welcome to MiniGallery,\nplease load an image to start working!</string>
</resources>